the 'licensing' commit

--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,20 @@
-/*
-* CSS Theme for Kaki-Blog
-* Under GPL-3
-* Copyright Kakise <me@kakise.xyz> 2016
+/*  Kaki-Blog, lightweight blog engine
+*   Copyright (C) 2016  Kakise <me@kakise.xyz>
+*
+*   This file is part of Kaki-Blog.
+*
+*   Kaki-Blog is free software: you can redistribute it and/or modify
+*   it under the terms of the GNU General Public License as published by
+*   the Free Software Foundation, either version 3 of the License, or
+*   (at your option) any later version.
+*
+*   Kaki-Blog is distributed in the hope that it will be useful,
+*   but WITHOUT ANY WARRANTY; without even the implied warranty of
+*   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*   GNU General Public License for more details.
+*
+*   You should have received a copy of the GNU General Public License
+*   along with Kaki-Blog.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 div .uk-grid {
