--- a/partials/index.pug
+++ b/partials/index.pug
@@ -1,11 +1,7 @@
 extends layout.pug
 
 block content
-  p(class="lead") Bienvenue sur mon tout nouveau blog ! :) 
-    br
-    | Le code source est disponible juste ici: 
-    a(href="https://github.com/Kakise/Kaki-Blog") Kaki-Blog
-    |.
+  p(class="lead")
   
   article(class="uk-article")
     each article in articles
